fix typeahead search layout on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10286,4 +10286,8 @@ span.twitter-typeahead {
   top: 2.375rem !important;
 }
 
+.tt-hint {
+  left: unset !important;
+}
+
 /*# sourceMappingURL=style.css.map */
